--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,23 @@
         <item>Split horizontal</item>
         <item>Split vertical</item>
     </string-array>
+    <string-array name="algorithm">
+        <item>Generic</item>
+        <item>Generic (B)</item>
+        <item>Still</item>
+        <item>Horizontal panning</item>
+        <item>Horizontal panning (B)</item>
+        <item>Vertical panning</item>
+        <item>Vertical panning (B)</item>
+        <item>Panning</item>
+        <item>Panning (B)</item>
+        <item>No rotation</item>
+    </string-array>
+    <string-array name="fps">
+        <item>Same as input</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>120</item>
+    </string-array>
 </resources>
