--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,10 @@
         <item>60</item>
         <item>120</item>
     </string-array>
+    <string-array name="crop">
+        <item>Auto</item>
+        <item>0%</item>
+        <item>5%</item>
+        <item>10%</item>
+    </string-array>
 </resources>
