Update UI and add more FPS manual values.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,12 @@
         <item>No rotation</item>
     </string-array>
     <string-array name="fps">
-        <item>Same as input</item>
+        <item>Auto-detect</item>
         <item>15</item>
+        <item>24</item>
+        <item>25</item>
         <item>30</item>
+        <item>50</item>
         <item>60</item>
         <item>120</item>
     </string-array>
