--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
         <item>5%</item>
         <item>10%</item>
     </string-array>
+    <string-array name="video_encoder">
+        <item>H265</item>
+        <item>H264</item>
+    </string-array>
 </resources>
